# softdesk_support

./: .env  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: api_urls.py  db.sqlite3  manage.py
src/authentication/: models.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py
src/projects/: admin.py  const.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/projects/migrations/: 0001_initial.py  0002_alter_project_author_issue_comment.py  0002_remove_project_contributors.py  0003_alter_comment_options_alter_issue_status_and_more.py  0004_alter_comment_author_alter_issue_status.py
src/soft_desk_support/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/static/soft_desk_support/: bootstrap.css
src/templates/soft_desk_support/: api.html  base.html
src/user/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_alter_user_age_alter_user_can_be_contacted_and_more.py  0002_alter_user_age_alter_user_last_name.py  0003_remove_user_date_created_alter_user_date_joined.py
