[project]
name = "softdesk-support"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2)",
    "djangorestframework (>=3.16.0)",
    "djangorestframework-simplejwt (>=5.5.0)",
    "django-filter (>=25.1)",
    "drf-nested-routers (>=0.94.2)",
    "flake8 (>=7.2.0)",
    "python-dotenv (>=1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
